# slykbots

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml  publish-ghcr.yml
docker-prod-file/: docker-compose.yml
fnb/: Cargo.toml
migrations/: 0001_reminder_state_type.sql  0001_reminders_table.sql  0002_reminders_table.sql  0003_markov_table.sql  0004_ai_chat_cache.sql  0005_settings.sql
murkov/: Cargo.toml  Dockerfile  murkov-startup.sh
murkov/src/: main.rs  utils.rs
murkov/src/ai/: ai_cache_model.rs  ai_commands.rs
murkov/src/commands/: mod.rs  music.rs  stats.rs  toggle.rs
murkov/src/handler/: event.rs  mod.rs
murkov/src/handler/events/: interaction_create.rs  message.rs  ready.rs  voice_state_update.rs
murkov/src/handler/interactions/: application_command.rs
murkov/src/markov_chains/: markov_model.rs  mod.rs
murkov/src/settings/: mod.rs  settings_service.rs
murkov/src/voice/: afk_auto_leave.rs  mod.rs  voice_commands.rs
murkov/src/yoking/: yokes.rs
rpp/: Cargo.toml  Dockerfile  rpp-startup.sh
rpp/src/: main.rs
rpp/src/handler/: event.rs  mod.rs
rpp/src/handler/events/: ready.rs
rpp/src/reddit/: local_cache.rs  mod.rs  reddit_feed.rs  reddit_post.rs
rpp/src/subscriptions/: mod.rs  sub_service.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/serenity_utils/: mod.rs  slashcommand.rs  types.rs  utils.rs
src/: main.rs  types.rs  util.rs  utils.rs
src/ai/: ai_cache_service.rs  ai_commands.rs  mod.rs
src/commands/: abort.rs  help.rs  mod.rs  music.rs  reminder.rs  stats.rs  toggle.rs
src/handler/: event.rs  mod.rs
src/handler/events/: interaction_create.rs  message.rs  mod.rs  ready.rs  voice_state_update.rs
src/handler/interactions/: application_command.rs  mod.rs
src/markov_chains/: markov_model.rs  markov_service.rs  mod.rs
src/models/: markov_model.rs  mod.rs  reminder.rs
src/service/: markov_service.rs  mod.rs  reminder_service.rs
src/settings/: setting.rs  settings_service.rs
src/voice/: afk_auto_leave.rs  mod.rs  song_end.rs  song_fader.rs  track_end.rs  track_info.rs  voice_commands.rs  voice_utils.rs
src/yoking/: mod.rs  yokes.rs
tables/: ai_chat_cache.sql  markov_table.sql  rpp_subscriptions.sql
