[package]
name = "murkov"
version = "0.2.2"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1.28.2", features = [ "rt-multi-thread" ] }
serenity = "*"
log = "0.4.18"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
url = "2.4.0"

songbird = {version = "0.3.2", features = ["yt-dlp", "builtin-queue"]}