[package]
name = "rpp"
version = "0.1.1"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "=0.6.3", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.28.2", features = [ "rt-multi-thread" ] }
serenity = "*"
log = "0.4.18"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
url = "2.4.0"
feed-rs = "1.3.0"
reqwest = "0.11.22"

shared = {path = "../shared"}